// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`directive getCustomDirectives() returns all directives if wildcard 1`] = `
{
  "testA": {
    "descriptor": [Function],
    "type": "@testA",
  },
  "testB": {
    "descriptor": [Function],
    "type": "@testB",
  },
}
`;

exports[`directive getCustomDirectives() returns all directives if wildcard without overriding specifics 1`] = `
{
  "testA": {
    "descriptor": [Function],
    "type": "@testA",
  },
  "testB": {
    "descriptor": [Function],
    "type": "@testB",
  },
}
`;

exports[`directive getCustomDirectives() returns matching custom directives in schema 1`] = `
{
  "testA": {
    "descriptor": [Function],
    "type": "@testA",
  },
}
`;
